--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>MSAN 622 Information Visualization</title>
+<title>Jeff Baker's </title>
 
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-theme.min.css" rel="stylesheet">
@@ -117,7 +117,7 @@
             </div>
 
             <div class="media-body">
-                <p>I am a professor at the <a href="http://www.usfca.edu/">University of San Francisco</a>. I am the graduate director for the <a href="https://www.usfca.edu/artsci/csg/">Masters of Science in Computer Science</a> program, and teach courses for the Department of Computer Science and <a href="http://www.usfca.edu/analytics/">Masters of Science in Analytics</a> program. I have a stubborn yet adorable corgi named Casablanca (after the movie).</p>
+                <p>My name is Jeff Baker. I'm a Masters candidate in the University of San Francisco's </p>
             </div>
         </div>
     </div>
@@ -128,24 +128,24 @@
         <table class="table table-bordered" style="width: auto;">
             <thead>
                 <tr>
-                    <th colspan="2">Sophie Engle</th>
+                    <th colspan="2">Jeff Baker</th>
                 </tr>
             </thead>
 
             <tbody>
                 <tr>
                     <th>Github:</th>
-                    <td><a href="http://msan622.github.io/spring-2015-msan622">msan622.github.io/spring-2015-msan622</a></td>
+                    <td><a href="http://jbaker22.github.io/">jbaker22.github.io</a></td>
                 </tr>
 
                 <tr>
                     <th>Email:</th>
-                    <td><a href="mailto:sjengle@cs.usfca.edu">sjengle@cs.usfca.edu</a></td>
+                    <td><a href="mailto:jrbaker2@cs.usfca.edu">jrbaker2@usfca.edu</a></td>
                 </tr>
 
                 <tr>
                     <th>Twitter:</th>
-                    <td><a href="https://twitter.com/sjengle">@sjengle</a></td>
+                    <td><a href="https://twitter.com/jbaker22">@jbaker22</a></td>
                 </tr>
             </tbody>
         </table>
@@ -155,7 +155,7 @@
 <hr/>
 
 <footer>
-    <p style="text-align: center;">Sophie Engle &bullet; MSAN 622 Information Visualization &bullet; Spring 2015</p>
+    <p style="text-align: center;">Jeff Baker &bullet; 2015</p>
 </footer>
 
 </div><!--/.container -->
