--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 
         <p class="view"><a href="https://github.com/jbaker22">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/jbaker22/spring-2015-msan622">MSAN622 Submission Page</a></p>
 
       </header>
       <section>
