--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 
         <p class="view"><a href="https://github.com/jbaker22">View My GitHub Profile</a></p>
         <p class="view"><a href="https://github.com/jbaker22/spring-2015-msan622">MSAN622 Submission Page</a></p>
-
       </header>
       <section>
-        <h3>
-<a id="welcome-to-jeff-bakers-github-page" class="anchor" href="#welcome-to-jeff-bakers-github-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Jeff Baker's GitHub page.</h3>
+        <h3>Welcome to Jeff Baker's GitHub page.</h3>
+
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
