homework 1 initial submit

--- a/spring-2015-msan622/homework1.html
+++ b/spring-2015-msan622/homework1.html
@@ -23,7 +23,7 @@
 
 </style>
 <svg class="chart" height="1" width="1"></svg>
-<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <br>
 <script>
 
