--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
   <head>
@@ -5,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>jbaker22.github.io by jbaker22</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="../stylesheets/styles.css">
+    <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="GitHub page of Jeff Baker (@jbaker22)">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -15,45 +17,70 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>jbaker22.github.io</h1>
-        <p>Jeff Baker - MS in Analytics, University of San Francisco</p>
+        <h1>Jeff Baker<br>jbaker22.github.io</h1>
+        <p>MS in Analytics, University of San Francisco</p>
+        <p class="view">
+            <a href="https://github.com/jbaker22">
+              <span class="icon  icon--github">
+                <svg viewBox="0 0 20 20">
+                  <path fill="#828282" d="M7.999,0.431c-4.285,0-7.76,3.474-7.76,7.761 c0,3.428,2.223,6.337,5.307,7.363c0.388,0.071,0.53-0.168,0.53-0.374c0-0.184-0.007-0.672-0.01-1.32 c-2.159,0.469-2.614-1.04-2.614-1.04c-0.353-0.896-0.862-1.135-0.862-1.135c-0.705-0.481,0.053-0.472,0.053-0.472 c0.779,0.055,1.189,0.8,1.189,0.8c0.692,1.186,1.816,0.843,2.258,0.645c0.071-0.502,0.271-0.843,0.493-1.037 C4.86,11.425,3.049,10.76,3.049,7.786c0-0.847,0.302-1.54,0.799-2.082C3.768,5.507,3.501,4.718,3.924,3.65 c0,0,0.652-0.209,2.134,0.796C6.677,4.273,7.34,4.187,8,4.184c0.659,0.003,1.323,0.089,1.943,0.261 c1.482-1.004,2.132-0.796,2.132-0.796c0.423,1.068,0.157,1.857,0.077,2.054c0.497,0.542,0.798,1.235,0.798,2.082 c0,2.981-1.814,3.637-3.543,3.829c0.279,0.24,0.527,0.713,0.527,1.437c0,1.037-0.01,1.874-0.01,2.129 c0,0.208,0.14,0.449,0.534,0.373c3.081-1.028,5.302-3.935,5.302-7.362C15.76,3.906,12.285,0.431,7.999,0.431z"/>
+                </svg>
+              </span>
+              <span class="username">GitHub</span>
+            </a>
+            <br>
+            <a href="https://www.linkedin.com/in/jeffreyrbaker">
+              <span class="icon icon--linkedin">
+                <svg viewBox = "0 0 20 20">
+                  <path fill="#FFFFFF" d="M6.902,0c-4.229,0-6.988,2.85-6.9,6.646c-0.088,3.619,2.677,6.553,6.815,6.553c4.313,0,7.073-2.934,7.073-6.553C13.807,2.85,11.13,0,6.902,0z M0.345,62.888h13.114V18.074H0.345V62.888z M48.906,18.705c-4.189,0-8.471-0.866-13.029,6.204h-0.256l-0.23-6.831H23.782c0.174,3.708,0.196,9.245,0.196,14.507v30.303h13.113V36.992c0-1.215,0.17-2.42,0.51-3.285c0.861-2.414,3.018-4.917,6.645-4.917c4.744,0,6.646,3.708,6.646,9.139v24.959H64V36.291C64,23.869,57.531,18.705,48.906,18.705z"/>
+                </svg>
+              </span>
+              <span class="username">LinkedIn</span>
+            </a>
+            <br>
+            <a href="https://twitter.com/jbaker22">
+              <span class="icon  icon--twitter">
+                <svg viewBox="0 0 20 20">
+                  <path fill="#828282" d="M15.969,3.058c-0.586,0.26-1.217,0.436-1.878,0.515c0.675-0.405,1.194-1.045,1.438-1.809
+                  c-0.632,0.375-1.332,0.647-2.076,0.793c-0.596-0.636-1.446-1.033-2.387-1.033c-1.806,0-3.27,1.464-3.27,3.27 c0,0.256,0.029,0.506,0.085,0.745C5.163,5.404,2.753,4.102,1.14,2.124C0.859,2.607,0.698,3.168,0.698,3.767 c0,1.134,0.577,2.135,1.455,2.722C1.616,6.472,1.112,6.325,0.671,6.08c0,0.014,0,0.027,0,0.041c0,1.584,1.127,2.906,2.623,3.206 C3.02,9.402,2.731,9.442,2.433,9.442c-0.211,0-0.416-0.021-0.615-0.059c0.416,1.299,1.624,2.245,3.055,2.271 c-1.119,0.877-2.529,1.4-4.061,1.4c-0.264,0-0.524-0.015-0.78-0.046c1.447,0.928,3.166,1.469,5.013,1.469 c6.015,0,9.304-4.983,9.304-9.304c0-0.142-0.003-0.283-0.009-0.423C14.976,4.29,15.531,3.714,15.969,3.058z"/>
+                </svg>
+              </span>
+              <span class="username">Twitter</span>
+            </a>
+            <br>
+            <a href="mailto:jrbaker2@usfca.edu">
+              <span class="icon icon--email">
+                <svg viewBox="0 0 20 20">
+                  <path fill="#828282" d=""/>
+                </svg>
+              </span>
+              <span class="username">Email</span>
+            </a>
+            <br>
+            <a href="Jeff_Baker_Resume.pdf">
+              <span class="icon icon--email">
+                <svg viewBox="0 0 20 20">
+                  <path fill="#828282" d=""/>
+                </svg>
+              </span>
+              <span class="username">Resume</span>
+            </a>
 
 
-        <p class="view"><a href="https://github.com/jbaker22">View My GitHub Profile</a></p>
-        <p class="view"><a href="https://github.com/jbaker22/spring-2015-msan622">MSAN622 Submission Page</a></p>
+            <br>
+            <br>
+          <a href="https://github.com/jbaker22/spring-2015-msan622">MSAN622 Submission Page</a>
+        </p>
+
       </header>
       <section>
         <h3>
+<a id="welcome-to-jeff-bakers-github-page" class="anchor" href="#welcome-to-jeff-bakers-github-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</h3>
 
+<p>Hello! I've been a marketing analytics professional for the last eight years, specializing in user behavior, audience/cohort analysis, and predictive modeling. Before that, I spent three awesome years teaching English in <a href="http://en.wikipedia.org/wiki/Yamanashi_Prefecture">Yamanashi, Japan</a>. The Bay Area is home, but as a San Diego native, I miss SoCal California burritos terribly. Ever had <a href="https://www.google.com/search?q=carne+asada+fries&tbm=isch&tbo=u&source=univ&sa=X&ei=mjsbVePGHsTdoATSyYCwAg&ved=0CJEBEIke&biw=1340&bih=735">carne asada fries</a> before?</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>I'm currently a Masters candidate at the University of San Francisco's Analytics program. I'm very interested in what makes people tick and how they behave. Specifically, I work on multi-channel attribution, instrumentation, machine learning, predictive modeling, and text (sentiment) analysis. For more information about the degree and/or the program, click <a href="http://www.usfca.edu/artsci/msan">here</a>.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
