fixed submission link on index

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </a>
             <br>
             <br>
-          <a href="https://github.com/jbaker22/spring-2015-msan622">MSAN622 Submission Page</a>
+          <a href="http://jbaker22.github.io/spring-2015-msan622">MSAN622 Submission Page</a>
         </p>
       </header>
       <section>
