updated hw1 and index for submission page

--- a/spring-2015-msan622/homework1.html
+++ b/spring-2015-msan622/homework1.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<head>    
+  <link rel="stylesheet" href="../stylesheets/styles.css">
+  <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="description" content="MSAN 622 Submission Page - Homework 1">
+</head>
 <style>
 
 .bar {
@@ -22,9 +28,9 @@
 }
 
 </style>
+<h3>To update, edit query string in the url (after "?")</h3>
 <svg class="chart" height="1" width="1"></svg>
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<br>
 <script>
 
 // get query string
