--- a/spring-2015-msan622/index.html
+++ b/spring-2015-msan622/index.html
@@ -56,13 +56,27 @@
               <span class="username">Email</span>
             </a>
             <br>
+            <a href="Jeff_Baker_Resume.pdf">
+              <span class="icon icon--email">
+                <svg viewBox="0 0 20 20">
+                  <path fill="#828282" d=""/>
+                </svg>
+              </span>
+              <span class="username">Resume</span>
+            </a>
+            <br>
             <br>
           <!-- <a href="http://jbaker22.github.io/">Return to Main</a> -->
           <a href="http://jbaker22.github.io/">Return to Main</a>
         </p>
 
       </header>
-      <section>    
+      <section>
+        <h3>
+<a id="welcome-to-jeff-bakers-github-page" class="anchor" href="#welcome-to-jeff-bakers-github-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</h3>
+
+<p>Hello! I've been a marketing analytics professional for the last eight years, specializing in user behavior, audience/cohort analysis, and predictive modeling. I'm very interested in what makes people tick, and how they behave. Specifically, I work on multi-channel attribution, instrumentation, machine learning, predictive modeling, and text (sentiment) analysis. Before that, I spent three awesome years teaching English in <a href="http://en.wikipedia.org/wiki/Yamanashi_Prefecture">Yamanashi, Japan</a>. The Bay Area is home, but as a San Diego native, I miss SoCal California burritos terribly. Ever had <a href="https://www.google.com/search?q=carne+asada+fries&tbm=isch&tbo=u&source=univ&sa=X&ei=mjsbVePGHsTdoATSyYCwAg&ved=0CJEBEIke&biw=1340&bih=735">carne asada fries</a> before?</p>
+
 <h3><a id="homework-submissions" class="anchor" href="#homework-submissions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Homework Submissions</h3>
 <p>
 <div><a href="homework1.html?hellothere!">Homework 1</a></div>
