--- a/spring-2015-msan622/index.html
+++ b/spring-2015-msan622/index.html
@@ -47,8 +47,7 @@
             </a>
             <br>
             <br>
-          <a href="http://jbaker22.github.io/spring-2015-msan622">MSAN622 Submission Page</a>
-        </p>          <a href="http://jbaker22.github.io/">Return to Main</a>
+            <a href="http://jbaker22.github.io/">Return to Main</a>
         </p>
 
       </header>
