added sorting functionality, changed code structure

--- a/spring-2015-msan622/homework1.html
+++ b/spring-2015-msan622/homework1.html
@@ -28,38 +28,24 @@
 }
 
 </style>
-<h3>To update, edit query string in the url (after "?")</h3>
+<br>
+<!-- <p>
+<form name="update" id="updateForm" action="#">
+  Query string: <br>
+  <input name="" type="text" id="queryString" placeholder="Enter string&hellip;">
+  <input name="submit" type="submit" value="Count Letters" onClick="updateData();">
+</form></p>
+ -->
+ <label><input name="sorting" id="changeSort" type="checkbox">Change sort</label>
+<br><br>
 <svg class="chart" height="1" width="1"></svg>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
+
 // get query string
 var query = decodeURI(window.location.search);
-
-// function to clean the query string of everything but alphanumerics
-String.prototype.cleanup = function() {
-  return this.toLowerCase().replace(/[^a-zA-Z0-9]+/g, '');
-}
-
-// get cleaned-up string
-var cleanString = query.cleanup();
-
-// init hash table of letters and their counts
-var letterCounts = Object();
-
-// iterate through string to populate table
-for (i = 0; i < cleanString.length; i++) {
-  var l = cleanString.charAt(i);
-  letterCounts[l] = (isNaN(letterCounts[l]) ? 1 : letterCounts[l] + 1);
-}
-
-// get keys (letters)
-var letters = Object.keys(letterCounts);
-
-// get values for the letter keys
-var counts = Object.keys(letterCounts).map(function(key) {
-  return letterCounts[key];
-});
+// var query = document.getElementById("updateForm").elements.namedItem("queryString").value;
 
 var margin = {top: 20, right: 20, bottom: 30, left: 70},
     width = 960 - margin.left - margin.right,
@@ -86,63 +72,145 @@ var yAxis = d3.svg.axis()
     .tickFormat(d3.format("d"))
     .tickSubdivide(0);
 
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-// create array of key/value pairs
-var letterArray = d3.entries(letterCounts)
-
-// sort letters alphabetically (B-level #3)
-letterArray = letterArray.sort(function(a,b) { 
-  if (a.key < b.key)
-    return -1
-  if (b.key < a.key)
-  return 1
-  return 0 
-});
-
-  x.domain(letterArray.map(function(d) { return d.key; }));
-  y.domain([0, d3.max(letterArray, function(d) { return d.value; })]);
-
-  svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis);
-
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-
-// modified "Frequency" axis label to be horizontal and above the line, for readability (B-level #4)
-    .append("text")
-      .attr("y", 6)
-      .attr("dy", "-1.5em")
-      .style("text-anchor", "end")
-      .text("Frequency");
-
 var vowels = ["a", "e", "i", "o", "u"];
 
-  svg.selectAll(".bar")
-      .data(letterArray)
-    .enter().append("rect")
-      .attr("class", "bar")
-      .attr("x", function(d) { return x(d.key); })
-      .attr("width", x.rangeBand())
-      .attr("y", function(d) { return y(d.value); })
-      .attr("height", function(d) { return height - y(d.value); })
-// change color of bars that correspond to vowels (B-level #5)
-      .style("fill", function(d) {
-        if (vowels.indexOf(d.key) > -1) {return "#ef8a62"}
-        else {return "steelblue"};
-      });
+
+// drawChart(query);
+
+
+function cleanString(query) {
+    // function to clean the query string of everything but alphanumerics
+    String.prototype.cleanup = function() {
+      return this.toLowerCase().replace(/[^a-zA-Z0-9]+/g, '');
+    }
+
+    // get cleaned-up string
+    var cleanString = query.cleanup();
+
+    // init hash table of letters and their counts
+    var letterCounts = Object();
+
+    // iterate through string to populate table
+    for (i = 0; i < cleanString.length; i++) {
+      var l = cleanString.charAt(i);
+      letterCounts[l] = (isNaN(letterCounts[l]) ? 1 : letterCounts[l] + 1);
+    }
+
+    return letterCounts;
+}
+
+
+function drawChart(query) {
+
+    // process query string to remove non-alphabet characters
+    var letterCounts = cleanString(query);
+
+    // create list of objects to store letter counts
+    var letterArray = d3.entries(letterCounts);
+
+    // sort letters alphabetically (B-level #3)
+    letterArray = letterArray.sort(function(a,b) { 
+      if (a.key < b.key)
+        return -1
+      if (b.key < a.key)
+      return 1
+      return 0 
+    });
+
+
+    // set domain ranges for axes
+    x.domain(letterArray.map(function(d) { return d.key; }));
+    y.domain([0, d3.max(letterArray, function(d) { return d.value; })]);
+
+
+    var svg = d3.select("body").append("svg")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+        .append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+
+
+    svg.append("g")
+        .attr("class", "x axis")
+        .attr("transform", "translate(0," + height + ")")
+        .call(xAxis);
+
+    svg.append("g")
+        .attr("class", "y axis")
+        .call(yAxis)
+
+        // modified "Frequency" axis label to be horizontal and above the line, for readability (B-level #4)
+        .append("text")
+        .attr("y", 6)
+        .attr("dy", "-1.5em")
+        .style("text-anchor", "end")
+        .text("Frequency");
+
+    svg.selectAll(".bar")
+        .data(letterArray)
+        .enter().append("rect")
+        .attr("class", "bar")
+        .attr("x", function(d) { return x(d.key); })
+        .attr("width", x.rangeBand())
+        .attr("y", function(d) { return y(d.value); })
+        .attr("height", function(d) { return height - y(d.value); })
+        // change color of bars that correspond to vowels (B-level #5)
+        .style("fill", function(d) {
+            if (vowels.indexOf(d.key) > -1) {return "#ef8a62"}
+            else {return "steelblue"};
+        });
+
+    d3.select("input").on("change", change);
+
+    var sortTimeout = setTimeout(function() {
+        d3.select("input").property("checked", true).each(change);
+    }, 1000);
+
+    function change() {
+        clearTimeout(sortTimeout);
+
+        // Copy-on-write since tweens are evaluated after a delay.
+        var x0 = x.domain(letterArray.sort(this.checked
+            ? function(a, b) { return b.value - a.value; }
+            : function(a, b) { return d3.ascending(a.key, b.key); })
+            .map(function(d) { return d.key; }))
+            .copy();
+
+        svg.selectAll(".bar")
+            .sort(function(a, b) { return x0(a.key) - x0(b.key); });
+
+        var transition = svg.transition().duration(500),
+            delay = function(d, i) { return i * 50; };
+
+        transition.selectAll(".bar")
+            .delay(delay)
+            .attr("x", function(d) { return x0(d.key); });
+
+        transition.select(".x.axis")
+            .call(xAxis)
+          .selectAll("g")
+            .delay(delay);
+    }
+}
+
+
+function updateData() {
+    // get query string
+    var query = document.getElementById("updateForm").elements.namedItem("queryString").value;
+    // process query string to remove non-alphabet characters
+    var letterCounts = cleanString(query);
+    drawChart(letterCounts)
+    return false;
+}
 
 
 function type(d) {
   d.value = +d.value;
   return d;
 }
+
+window.onload = drawChart(query);
+
 
 </script>
