--- a/spring-2015-msan622/index.html
+++ b/spring-2015-msan622/index.html
@@ -47,6 +47,8 @@
             </a>
             <br>
             <br>
+            <a href="https://github.com/jbaker22/jbaker22.github.io/tree/master/spring-2015-msan622">Submission Page GitHub Repo</a>
+            <br>
             <a href="http://jbaker22.github.io/">Return to Main</a>
         </p>
 
